fix: increase button contrast in high contrast mode (#123)
fixes: #86

--- a/src/styles/custom-components.less
+++ b/src/styles/custom-components.less
@@ -79,10 +79,25 @@
         color: var(--black-700);
     }
 
+    .highcontrast-mode({
+        color: var(--black-900);
+    });
+
     &.is-selected,
     &:active {
         color: var(--black-900);
         background-color: var(--black-100);
+
+        .highcontrast-mode({
+            color: var(--black-050);
+            background-color: var(--black-900);
+            &:hover {
+                color: var(--black-050);
+            }
+            &.s-btn.s-btn__dropdown {
+                border-color: var(--black-900);
+            }
+        });
     }
 
     &.is-disabled {
@@ -91,6 +106,11 @@
         &:hover {
             background-color: transparent;
         }
+
+        .highcontrast-mode({
+            opacity: 0.5;
+            color: var(--black-300);
+        });
     }
 
     &:focus {
